...
    bool correctServer = false;
    bool correctPort = false;

    for (final line in lines) {
      if (line.trim().startsWith('Enabled: Yes')) enabled = true;
      if (line.trim().contains('Server: 127.0.0.1')) correctServer = true;
      if (line.trim().contains('Port: $port')) correctPort = true;
    }

    return enabled && correctServer && correctPort;
  }

  /// Check if the Cheddar Proxy Root CA certificate is trusted
...
